objects/Salary_Details__c.object
<CustomObject>
    <description>it is salary details object to store salary details of an employee</description>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <description>Here is account number of employee</description>
        <label>Bank Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Details__c</fullName>
        <description>here is bank details means name address etc</description>
        <label>Bank Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic__c</fullName>
        <description>basics of employee</description>
        <label>Basic</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credited_To__c</fullName>
        <description>Master detail relationship of employee</description>
        <label>Credited To</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Salary Details</relationshipLabel>
        <relationshipName>SALARY_DETAILS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gross_Salary__c</fullName>
        <description>Gross salary of employee</description>
        <formula>Total_Earnings__c  -  PF_Deduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRA__c</fullName>
        <description>HRA calculation of employee</description>
        <label>HRA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mode_of_Payment__c</fullName>
        <description>How employee will get payment id mode of payment</description>
        <label>Mode of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>RTGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Deduction__c</fullName>
        <description>PF of employee</description>
        <label>PF Deduction</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary_Credit_Date__c</fullName>
        <description>The date on which salary is creadited</description>
        <label>Salary Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salary_ID__c</fullName>
        <description>Employee&apos;s salary ID</description>
        <displayFormat>SAL-{000000}</displayFormat>
        <label>Salary ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Special_Allowance__c</fullName>
        <description>Special allowance of employee</description>
        <label>Special Allowance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Earnings__c</fullName>
        <description>Total Earning of employee</description>
        <formula>Basic__c +   HRA__c   + Special_Allowance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Salary Detail</label>
    <nameField>
        <label>Name of Accountant</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salary Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Active_Employee</fullName>
        <active>true</active>
        <description>this rule will check if employee is active or not</description>
        <errorConditionFormula>Credited_To__r.Is_Active__c ==FALSE</errorConditionFormula>
        <errorMessage>Your are not active employee so u can not create salary details account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bank_Account_No</fullName>
        <active>true</active>
        <description>Here is validation for bank account No</description>
        <errorConditionFormula>ISCHANGED( Bank_Account_Number__c )</errorConditionFormula>
        <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
        <errorMessage>Bank Account No can not be change</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bank_Details</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK( Bank_Details__c  )
)</errorConditionFormula>
        <errorDisplayField>Bank_Details__c</errorDisplayField>
        <errorMessage>Bank Details can not be NULL</errorMessage>
    </validationRules>
</CustomObject>